--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -301,8 +301,6 @@
     "embedded_sequences = embedding_layer(sequence_input)\n",
     "x = LSTM(\n",
     "    64,\n",
-    "    dropout=0.1,\n",
-    "    recurrent_dropout=0.5,\n",
     "    kernel_initializer='glorot_normal',\n",
     "    recurrent_initializer='glorot_normal'\n",
     ")(embedded_sequences)\n",
@@ -364,51 +362,51 @@
      "text": [
       "Train on 174432 samples, validate on 43608 samples\n",
       "Epoch 1/20\n",
-      "174432/174432 [==============================] - 203s 1ms/step - loss: 0.5145 - acc: 0.7448 - val_loss: 0.3978 - val_acc: 0.8177\n",
+      "174432/174432 [==============================] - 182s 1ms/step - loss: 0.4685 - acc: 0.7752 - val_loss: 0.3923 - val_acc: 0.8246\n",
       "Epoch 2/20\n",
-      "174432/174432 [==============================] - 304s 2ms/step - loss: 0.3896 - acc: 0.8225 - val_loss: 0.3468 - val_acc: 0.8442\n",
+      "174432/174432 [==============================] - 182s 1ms/step - loss: 0.3659 - acc: 0.8352 - val_loss: 0.3552 - val_acc: 0.8418\n",
       "Epoch 3/20\n",
-      "174432/174432 [==============================] - 223s 1ms/step - loss: 0.3549 - acc: 0.8407 - val_loss: 0.3276 - val_acc: 0.8535\n",
+      "174432/174432 [==============================] - 182s 1ms/step - loss: 0.3283 - acc: 0.8542 - val_loss: 0.3248 - val_acc: 0.8540\n",
       "Epoch 4/20\n",
-      "174432/174432 [==============================] - 210s 1ms/step - loss: 0.3349 - acc: 0.8504 - val_loss: 0.3159 - val_acc: 0.8578\n",
+      "174432/174432 [==============================] - 183s 1ms/step - loss: 0.3101 - acc: 0.8630 - val_loss: 0.3144 - val_acc: 0.8603\n",
       "Epoch 5/20\n",
-      "174432/174432 [==============================] - 205s 1ms/step - loss: 0.3221 - acc: 0.8570 - val_loss: 0.3029 - val_acc: 0.8643\n",
+      "174432/174432 [==============================] - 182s 1ms/step - loss: 0.2985 - acc: 0.8685 - val_loss: 0.3032 - val_acc: 0.8651\n",
       "Epoch 6/20\n",
-      "174432/174432 [==============================] - 206s 1ms/step - loss: 0.3119 - acc: 0.8619 - val_loss: 0.2967 - val_acc: 0.8688\n",
+      "174432/174432 [==============================] - 183s 1ms/step - loss: 0.2879 - acc: 0.8743 - val_loss: 0.2962 - val_acc: 0.8680\n",
       "Epoch 7/20\n",
-      "174432/174432 [==============================] - 201s 1ms/step - loss: 0.3050 - acc: 0.8657 - val_loss: 0.2902 - val_acc: 0.8728\n",
+      "174432/174432 [==============================] - 183s 1ms/step - loss: 0.2782 - acc: 0.8790 - val_loss: 0.2888 - val_acc: 0.8725\n",
       "Epoch 8/20\n",
-      "174432/174432 [==============================] - 201s 1ms/step - loss: 0.2983 - acc: 0.8694 - val_loss: 0.2860 - val_acc: 0.8744\n",
+      "174432/174432 [==============================] - 182s 1ms/step - loss: 0.2713 - acc: 0.8827 - val_loss: 0.2844 - val_acc: 0.8749\n",
       "Epoch 9/20\n",
-      "174432/174432 [==============================] - 200s 1ms/step - loss: 0.2927 - acc: 0.8712 - val_loss: 0.2845 - val_acc: 0.8747\n",
+      "174432/174432 [==============================] - 183s 1ms/step - loss: 0.2647 - acc: 0.8860 - val_loss: 0.2814 - val_acc: 0.8762\n",
       "Epoch 10/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2879 - acc: 0.8739 - val_loss: 0.2805 - val_acc: 0.8768\n",
+      "174432/174432 [==============================] - 185s 1ms/step - loss: 0.2604 - acc: 0.8876 - val_loss: 0.2787 - val_acc: 0.8792\n",
       "Epoch 11/20\n",
-      "174432/174432 [==============================] - 200s 1ms/step - loss: 0.2841 - acc: 0.8755 - val_loss: 0.2764 - val_acc: 0.8786\n",
+      "174432/174432 [==============================] - 186s 1ms/step - loss: 0.2536 - acc: 0.8909 - val_loss: 0.2750 - val_acc: 0.8789\n",
       "Epoch 12/20\n",
-      "174432/174432 [==============================] - 201s 1ms/step - loss: 0.2805 - acc: 0.8781 - val_loss: 0.2752 - val_acc: 0.8796\n",
+      "174432/174432 [==============================] - 186s 1ms/step - loss: 0.2490 - acc: 0.8930 - val_loss: 0.2799 - val_acc: 0.8775\n",
       "Epoch 13/20\n",
-      "174432/174432 [==============================] - 200s 1ms/step - loss: 0.2777 - acc: 0.8793 - val_loss: 0.2743 - val_acc: 0.8798\n",
+      "174432/174432 [==============================] - 186s 1ms/step - loss: 0.2447 - acc: 0.8952 - val_loss: 0.2831 - val_acc: 0.8791\n",
       "Epoch 14/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2757 - acc: 0.8807 - val_loss: 0.2756 - val_acc: 0.8781\n",
+      "174432/174432 [==============================] - 188s 1ms/step - loss: 0.2404 - acc: 0.8969 - val_loss: 0.2741 - val_acc: 0.8812\n",
       "Epoch 15/20\n",
-      "174432/174432 [==============================] - 200s 1ms/step - loss: 0.2730 - acc: 0.8808 - val_loss: 0.2700 - val_acc: 0.8819\n",
+      "174432/174432 [==============================] - 187s 1ms/step - loss: 0.2375 - acc: 0.8986 - val_loss: 0.2867 - val_acc: 0.8758\n",
       "Epoch 16/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2702 - acc: 0.8829 - val_loss: 0.2698 - val_acc: 0.8822\n",
+      "174432/174432 [==============================] - 186s 1ms/step - loss: 0.2327 - acc: 0.9008 - val_loss: 0.2723 - val_acc: 0.8817\n",
       "Epoch 17/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2686 - acc: 0.8841 - val_loss: 0.2745 - val_acc: 0.8797\n",
+      "174432/174432 [==============================] - 188s 1ms/step - loss: 0.2283 - acc: 0.9034 - val_loss: 0.2733 - val_acc: 0.8813\n",
       "Epoch 18/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2666 - acc: 0.8850 - val_loss: 0.2668 - val_acc: 0.8832\n",
+      "174432/174432 [==============================] - 185s 1ms/step - loss: 0.2249 - acc: 0.9051 - val_loss: 0.2695 - val_acc: 0.8833\n",
       "Epoch 19/20\n",
-      "174432/174432 [==============================] - 198s 1ms/step - loss: 0.2641 - acc: 0.8857 - val_loss: 0.2670 - val_acc: 0.8838\n",
+      "174432/174432 [==============================] - 184s 1ms/step - loss: 0.2208 - acc: 0.9067 - val_loss: 0.2785 - val_acc: 0.8814\n",
       "Epoch 20/20\n",
-      "174432/174432 [==============================] - 199s 1ms/step - loss: 0.2624 - acc: 0.8864 - val_loss: 0.2666 - val_acc: 0.8838\n"
+      "174432/174432 [==============================] - 183s 1ms/step - loss: 0.2173 - acc: 0.9092 - val_loss: 0.2799 - val_acc: 0.8777\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f7f44fe2d30>"
+       "<keras.callbacks.History at 0x7f23705cefd0>"
       ]
      },
      "execution_count": 11,
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -495,35 +493,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:TensorFlow version 1.7.0 detected. Last version known to be fully compatible is 1.5.0 .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import coremltools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : input_1, <keras.engine.topology.InputLayer object at 0x7f7ed9e4c198>\n",
-      "1 : embedding_1, <keras.layers.embeddings.Embedding object at 0x7f7ed9e4c2e8>\n",
-      "2 : lstm_1, <keras.layers.recurrent.LSTM object at 0x7f7ed9e4c0f0>\n",
-      "3 : dense_1, <keras.layers.core.Dense object at 0x7f7ed9e4c400>\n",
-      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f7dfa37eb00>\n"
+      "0 : input_1, <keras.engine.topology.InputLayer object at 0x7f2301760080>\n",
+      "1 : embedding_1, <keras.layers.embeddings.Embedding object at 0x7f23017601d0>\n",
+      "2 : lstm_1, <keras.layers.recurrent.LSTM object at 0x7f2301760390>\n",
+      "3 : dense_1, <keras.layers.core.Dense object at 0x7f23017602b0>\n",
+      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f2214d572b0>\n"
      ]
     }
    ],
@@ -554,9 +544,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/danial/DL/livesentiment/ENV/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/danial/DL/livesentiment/ENV/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflowjs as tfjs"
    ]
@@ -567,7 +576,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfjs.converters.save_keras_model(model, './output/sentiment_js_model')"
+    "# for some reason models converted with tfjs.converters.save_keras_model are currenlty giving an error on the browser\n",
+    "# so we're using the bash command tensorflowjs_converter \n",
+    "# tfjs.converters.save_keras_model(model, './output/sentiment_js_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf ./output/sentiment_js_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/danial/DL/livesentiment/ENV/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "WARNING:tensorflow:From /home/danial/DL/livesentiment/ENV/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tensorflowjs_converter --input_format keras ./output/model.h5 ./output/sentiment_js_model"
    ]
   },
   {
@@ -579,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
