renamed coreml model

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
       "1 : embedding_1, <keras.layers.embeddings.Embedding object at 0x7f23017601d0>\n",
       "2 : lstm_1, <keras.layers.recurrent.LSTM object at 0x7f2301760390>\n",
       "3 : dense_1, <keras.layers.core.Dense object at 0x7f23017602b0>\n",
-      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f2214d572b0>\n"
+      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f23a68bd9b0>\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
     "coreml_model.input_description['input'] = 'A String mapped according to the pre-deifned mapping'\n",
     "coreml_model.output_description['output'] = 'Whether the sentence was positive or negative'\n",
     "\n",
-    "coreml_model.save('./output/model.mlmodel')"
+    "coreml_model.save('./output/SentimentModel.mlmodel')"
    ]
   },
   {
