coreml model without output label + renaming

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
       "1 : embedding_1, <keras.layers.embeddings.Embedding object at 0x7f23017601d0>\n",
       "2 : lstm_1, <keras.layers.recurrent.LSTM object at 0x7f2301760390>\n",
       "3 : dense_1, <keras.layers.core.Dense object at 0x7f23017602b0>\n",
-      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f23a68bd9b0>\n"
+      "4 : dense_1__activation__, <keras.layers.core.Activation object at 0x7f2214d57eb8>\n"
      ]
     }
    ],
@@ -522,8 +522,7 @@
     "coreml_model = coremltools.converters.keras.convert(\n",
     "  model,\n",
     "  input_names = 'input',\n",
-    "  output_names = 'output',\n",
-    "  class_labels = [0, 1]\n",
+    "  output_names = 'output'\n",
     ")\n",
     "\n",
     "coreml_model.author = 'Danial Khosravi'\n",
@@ -774,7 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sqlite_file = './output/sentiment_db.sqlite'"
+    "sqlite_file = './output/sentiment_db.db'"
    ]
   },
   {
