clean up and readme fix

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -292,6 +292,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -782,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf ./output/sentiment_db.sqlite"
+    "!rm -rf ./output/sentiment_db.db"
    ]
   },
   {
